--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 */target
+*/target/*
 */.idea
+*/.idea/*
 */out
+*/out/*
+*/cmake-build-debug
+*/cmake-build-release
+*/cmake-build-debug/*
+*/cmake-build-release/*
+*/.gitignore
